# cppgan

./: .gitignore  CMakeLists.txt  README.md
include/: cppgan.hpp
scripts/: download_mnist.py
src/: cppgan.cpp
test/: cppganTest.cpp
